Documentation Swagger pour la gestion des simulations. Il manque la partie récupération des résultats.
